--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "live-server": "^1.2.2"
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "live-server": "^1.2.2",
+    "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
